[project]
name = "searxng-stealth-mcp"
version = "1.1.4"
description = "SearXNG Stealth MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "requests",
]

[project.scripts]
searxng-stealth-mcp = "searxng_stealth_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/searxng_stealth_mcp"]
