[project]
name = "searxng-stealth-mcp"
version = "1.3.0"
description = "SearXNG Stealth MCP server (HTTP/2 Pro version)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx[http2]",
]

[project.scripts]
searxng-stealth-mcp = "searxng_stealth_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/searxng_stealth_mcp"]
